added link to github repo, renamed page

--- a/index.html
+++ b/index.html
@@ -83,6 +83,16 @@
 				color: white;
 				font-family: sans-serif;
 			}
+			
+			a[href], a[href]:visited {
+				color: white;
+				text-decoration: underline;
+			}
+			
+			a[href]:hover {
+				color: white;
+				font-weight: bold;
+			}
 		</style>
 	</head>
 	
@@ -105,6 +115,7 @@
 			<li>Sleeping hours in this are from 27:00 - 08:20, totalling 9.3 hours.</li>
 			<li>Monday waking time starts Sunday 20:20 local time.</li>
 			<li>The 24-hour format is "fake", so it runs slower.</li>
+			<li><a href="https://github.com/micolous/mtz/">Source code in github!</a></li>
 		</ul>
 	</body>
 </html>
